# Chipollino

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  LICENSE.md  README.md  Rules.txt  test.txt
.github/workflows/: CheckIssueLink.yml  add-to-project.yml  cmake.yml  cpp-linter.yml  integrationTests.yml  main.yml  metamorphicTests.yml  refalLinter.yml  super-linter.yml  unitTests.yml  СheckIssueLink.yml
Fraction/: CMakeLists.txt
InputGenerator/: CMakelists.txt
InputGenerator/src/: RegexGenerator.cpp  TasksGenerator.cpp  main.cpp
InputGeneratorApp/: CMakeLists.txt
Interpreter/: CMakeLists.txt
Interpreter/src/: Interpreter.Lexer.cpp  Interpreter.cpp  main.cpp
Objects/src/: AlphabetSymbol.cpp  FiniteAutomaton.cpp  Regex.cpp
TestData/: grammar.txt
TestData/MFAparser/: test1.txt  test2.txt
Tests/: CMakeLists.txt
Tests/src/: Example.cpp  main.cpp
TestsApp/src/: Example.cpp
apps/InputGeneratorApp/: CMakeLists.txt
apps/IntegrationTestsApp/: CMakeLists.txt
apps/IntegrationTestsApp/src/: main.cpp
apps/InterpreterApp/: CMakeLists.txt
apps/InterpreterApp/src/: main.cpp
apps/MetamorphicTestsApp/: CMakeLists.txt
apps/TestsApp/: CMakeLists.txt
apps/TestsApp/include/TestsApp/: Example.h
apps/TestsApp/src/: Example.cpp  UnitTests.cpp  main.cpp
apps/UnitTestsApp/: CMakeLists.txt
apps/UnitTestsApp/include/UnitTestsApp/: Example.h  UnitTests.h
apps/UnitTestsApp/src/: Example.cpp  UnitTests.cpp  main.cpp
config/automata_parser/: grammar.txt
config/automaton_parser/: grammar.txt
documentation/: antimirov.tex  follow.tex  glushkov.tex  tomson.tex
documentation/tex/: antimirov.tex  follow.tex  glushkov.tex  tomson.tex
include/: AlphabetSymbol.h  AutomatonToImage.h  DSU.h  Example.h  Fraction.h  Interpreter.h  Logger.h  LongDouble.h
include/objects/: AutomatonToImage.h  BaseObject.h  FiniteAutomat.h  FiniteAutomaton.h  Grammar.h  Integer.h  Language.h  Logger.h  Regex.h  RegexGenerator.h  TasksGenerator.h  Tester.h  TransformationMonoid.h  Typization.h  arden.h
libs/AutomataParser/: CMakeLists.txt
libs/AutomataParser/include/: Lexer.h  Parser.h
libs/AutomataParser/include/AutomataParser/: Lexer.h  ParseTreeDescend.h  Parser.h
libs/AutomataParser/src/: Lexer.cpp  ParseTreeDescend.cpp  Parser.cpp
libs/AutomatonParser/: CMakeLists.txt
libs/AutomatonParser/include/AutomatonParser/: Parser.h
libs/AutomatonParser/src/: Lexer.cpp  Parser.cpp
libs/AutomatonToImage/: CMakeLists.txt
libs/AutomatonToImage/include/AutomatonToImage/: AutomatonToImage.h
libs/AutomatonToImage/src/: AutomatonToImage.cpp
libs/Fraction/: CMakeLists.txt
libs/Fraction/include/Fraction/: Fraction.h  InfInt.h
libs/Fraction/src/: Fraction.cpp
libs/FuncLib/: CMakeLists.txt
libs/InfInt/: CMakeLists.txt
libs/InputGenerator/: CMakeLists.txt  CMakelists.txt
libs/InputGenerator/include/InputGenerator/: AutomatonGenerator.h  RegexGenerator.h  TasksGenerator.h
libs/InputGenerator/src/: AutomatonGenerator.cpp  RegexGenerator.cpp  TasksGenerator.cpp
libs/Interpreter/: CMakeLists.txt
libs/Interpreter/include/Interpreter/: Interpreter.h  Typization.h
libs/Interpreter/src/: Interpreter.Lexer.cpp  Interpreter.cpp  TemplateGenerator.cpp
libs/Logger/: CMakeLists.txt
libs/Logger/include/Logger/: LogTemplate.h  Logger.h
libs/Logger/src/: LogTemplate.cpp  Logger.cpp
libs/Objects/: CMakeLists.txt
libs/Objects/include/Objects/: AbstractMachine.h  AlgExpression.h  AlphabetSymbol.h  BackRefRegex.h  BaseObject.h  FiniteAutomaton.h  Grammar.h  Language.h  Logger.h  MemoryCommon.h  MemoryFiniteAutomaton.h  MetaInfo.h  PushdownAutomaton.h  Regex.h  Symbol.h  Tools.h  TransformationMonoid.h  iLogTemplate.h
libs/Objects/src/: AbstractMachine.cpp  AlgExpression.cpp  AlphabetSymbol.cpp  BackRefRegex.cpp  BaseObject.cpp  FiniteAutomaton.cpp  Grammar.cpp  Language.cpp  Logger.cpp  MemoryCommon.cpp  MemoryFiniteAutomaton.cpp  MetaInfo.cpp  PushdownAutomaton.cpp  Regex.cpp  Symbol.cpp  Tools.cpp  TransformationMonoid.cpp
libs/Tester/: CMakeLists.txt
libs/Tester/include/Tester/: Tester.h
libs/Tester/src/: Tester.cpp
refal/: Colorize.ref  FrameFormatter.ref  FrameGen.bat  L_input.tex  MathMode.ref  MathMode.rsl  Mod_input.dot  Postprocess.ref  Postprocess.rsl  Preprocess.ref  Preprocess.rsl  R_input.tex  RunFormatter.ref  TestGenerator.ref  TestGenerator.rsl  TestPreamble.tex  compile.bat  compile.sh  config.yaml  converter.bat  dummy.ref  error_refal.txt  input.dot  input.tex  normalize.ref  normalize_template.ref  normalize_template.ref.txt  pagedata
resources/: all_functions.txt  glushkov-template.tex  glushkov.tex  head.tex  report.tex
resources/template/: Action.tex  ActionBisimilar.tex  AddTrap.tex  Ambiguity.tex  Annote.tex  Antimirov.tex  Arden.tex  Bisimilar.tex  Bisimilar2.tex  ClassCard.tex  ClassLength.tex  Complement.tex  Complement1.tex  Complement2.tex  Complement3.tex  DeAnnote1.tex  DeAnnote2.tex  DeLinearize1.tex  DeLinearize2.tex  Derivative.tex  Deterministic.tex  Deterministic1.tex  Deterministic2.tex  Deterministic3.tex  Determinize+.tex  Determinize.tex  Determinize2.tex  Difference.tex  Disambiguate.tex  Equal1.tex  Equal2.tex  Equal3.tex  Equal4.tex  Equal5.tex  Equal6.tex  Equal7.tex  Equiv1.tex  Equiv2.tex  GlaisterShallit.tex  Glushkov.tex  (+68 more)
scripts/: build_docker.sh  chipollino.txt  install_packages.sh  prerun.sh  readme.md  repl.sh  run_code_docker.sh  run_docker.sh  run_integration.sh  runcode.sh
scripts/integrationTests/: 1.txt  2.txt
src/: AlphabetSymbol.cpp  AutomatonToImage.cpp  DSU.cpp  Example.cpp  Fraction.cpp  Interpreter.Lexer.cpp  Interpreter.cpp  Logger.cpp  LongDouble.cpp  TypeChecker.cpp  main.cpp
src/objects/: AutomatonToImage.cpp  BaseObject.cpp  FiniteAutomat.cpp  FiniteAutomaton.cpp  Grammar.cpp  Integer.cpp  Language.cpp  Logger.cpp  Regex.cpp  RegexGenerator.cpp  TasksGenerator.cpp  Tester.cpp  TransformationMonoid.cpp  arden.cpp
testdata/: test_pda_anbn.txt  test_pda_anbn_content.txt  test_pda_complement.txt  test_pda_isdet_true.txt  test_regular_intersect.txt
(+17 files in other folders)
